[tool.poetry]
name = "onboarding"
version = "0.1.0"
description = "Journeys and scripts for Platform Onboarding"
authors = ["Gerrit Vermeulen <gerrit@reachdigitalhealth.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
ruff = "^0.5.4"
pytest = "^8.3.2"
pyyaml = "^6.0.1"
yamllint = "^1.35.1"
flow-wrangler = {git = "ssh://git@github.com/praekeltfoundation/flow-wrangler.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
